# mesh_color_texture

./: CMakeLists.txt  MeshColorTexture  README.md
Resources/Models/donut/: Donut_plain.mtl  Donut_plain_with_normal.mtl  steve.mtl
Resources/Shaders/: PBRFragmentShader.glsl  PBRVertexShader.glsl
Sources/: IO.cpp  IO.h  Main.cpp  Material.h  Mesh.h  MeshColor.h  MeshColorTexture.h  Rasterizer.cpp  Rasterizer.h  RayTracer.cpp  RayTracer.h  Renderer.h  Resources.h  Scene.h
